--- a/css/login.css
+++ b/css/login.css
@@ -30,33 +30,36 @@ fieldset {
 }
 
 .form-group {
-    /* This element must use 100% of the width */
-    /* It should have a separation of .5em from elements on top of it and below it*/
+   width: 100%; /* This element must use 100% of the width */
+    margin-top: .5em; /* It should have a separation of .5em from elements on top of it and below it*/
+    margin-bottom: .5em;
 }
 
 .form-label {
-    /* The text of a label must be bold */
+    font-weight: bold; /* The text of a label must be bold */
 }
 
 .btn-block {
-    /* This element should use 100% of the width */
+    width: 100%; /* This element should use 100% of the width */
 }
 
 .btn {
-    /* There must be a separation of 8px between the text and the border of this element */
-    /* The text color of this element should be white and bold */
-    /* The border of this element should be 1px, and its color should be light grey */
+    padding: 8px; /* There must be a separation of 8px between the text and the border of this element */
+    color: white; /* The text color of this element should be white and bold */
+    font-weight: bold;
+    border: 1px solid lightgray; /* The border of this element should be 1px, and its color should be light grey */
     background-color: #0fb784;
 }
 
 .form-control {
-    /* There must be 4px on top of the text and below the text of an input with this class */
-    /* It should have a separation of .5em from elements on top of it and below it */
-
+    padding-top: 4px; /* There must be 4px on top of the text and below the text of an input with this class */
+    padding-bottom: 4px;
+    margin-top: .5em; /* It should have a separation of .5em from elements on top of it and below it */
+    margin-bottom: .5em;
     /* You'll need to use the `calc` function to make the width of this element match the width of the button */
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: 100%;
+    width: calc(100% - 4px);
 }
 
 
