--- a/css/twitter.css
+++ b/css/twitter.css
@@ -93,16 +93,16 @@ a {
     float: left;
     margin-left: 0.5em;
     margin-right: 0.5em;
-    calc(50% - 1em);
+    width: calc(50% - 1em);
 }
 .who-to-follow {
     float: left;
     margin-left: 0.5em;
     margin-right: 0.5em;
-    calc(25% - 1em);
+    width: calc(25% - 1em);
 }
 .container {
-    margin: 2em;
+    margin: 0;
 }
 .media {
     width: 100%;
