--- a/css/chili-website-exercise.css
+++ b/css/chili-website-exercise.css
@@ -1,6 +1,32 @@
 .h1-header {
     text-align: center;
     color: orangered;
+    font-weight: bolder;
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    height: 50px;
+    align-items: center;
+    margin: -0.5em;
+}
+
+li:nth-child(3) {
+    margin-right: 1.5em;
+}
+
+li {
+    display: flex;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    color: orange;
 }
 
 body {
@@ -22,4 +48,25 @@ body {
 
 .chili-table {
     display: inline-block;
+}
+
+h2 {
+    color: darkorange;
+}
+
+h3 {
+    color: firebrick;
+}
+
+div {
+    color: black;
+}
+
+p {
+    color: black;
+}
+
+.chili-logo {
+    height: 55px;
+    width: auto;
 }
