--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,9 +1,48 @@
-@media screen and (max-width: 564px) and (max-height: 937px) {
+@media screen and (max-width: 364px) and (max-height: 937px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: Arial;
+        margin-left: 10px;
+    }
+
+    h1 {
+        font-size: 46px;
+        margin-top: 0;
+    }
+
+    nav>ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-left: -40px;
+        margin-top: -15px;
+    }
+
+    nav>ul>li>a {
+        display: flex;
+        align-items: center;
+    }
+
+    li {
+        background: lightgray;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        margin: 7px 7px;
+        width: 330px;
+        max-height: 50px;
+        min-height: 25px;
+    }
+
     .hidden-on-desktop {
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #b6e8f1;
+        background-color: #bde7ef;
         border: 0.1em solid lightgray;
         height: 50px;
         width: 100%;
@@ -19,8 +58,13 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-right: 15px;
-        width: 564px;
+        margin-right: 10px;
+        margin-left: 10px;
+        width: 350px;
+    }
+
+    .sub-section {
+        font-style: italic;
     }
 
 }
