--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,14 +1,92 @@
-@media screen and (max-width: 364px) and (max-height: 937px) {
+@media screen and (min-width: 391px) {
     body {
-        font-family: Arial;
-        margin-left: 10px;
+        margin: 10px 15px;
+    }
+
+    body > div > a {
+        content-visibility: hidden;
+    }
+
+    nav {
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        margin-top: 20px;
+        margin-right: 2px;
     }
 
     h1 {
-        font-size: 46px;
-        margin-top: 2px;
+        display: flex;
+        float: left;
+        justify-content: flex-start;
+        width: 25%;
+        margin-right: 150px;
+        margin-bottom: 55px;
+    }
+
+    ul {
+        display: flex;
+        justify-content: flex-end;
+        float: right;
+    }
+
+    li {
+        list-style-type: none;
+        padding-left: 15px;
+    }
+
+    a {
+        display: inline-block;
+    }
+
+    div>img {
+        width: 100%
+    }
+
+    .main {
+        float: left;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 60%;
+        margin-right: 5px;
+    }
+
+    .sub-section {
+        float: right;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        width: 35%;
+        font-style: italic;
+    }
+
+    footer {
+        clear: left;
+        margin-top: 350px;
+    }
+
+}
+
+@media screen and (max-width: 390px) {
+    body {
+        font-family: Arial;
+        margin: 10px 15px;
+    }
+
+    h1 {
         display: flex;
         justify-content: center;
+        font-size: 46px;
+        margin-top: 5px;
+        margin-bottom: 8px;
+        width: 100%;
+    }
+
+    nav {
+        display: flex;
+        justify-content: center;
+        width: 100%;
     }
 
     nav>ul {
@@ -16,8 +94,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-left: -45px;
-        margin-top: -15px;
+        margin-right: 45px;
+        width: 100%;
     }
 
     nav>ul>li>a {
@@ -27,13 +105,15 @@
 
     li {
         background: lightgray;
-        padding: 10px;
         display: flex;
         justify-content: center;
-        margin: 7px 7px;
-        width: 319px;
+        margin-top: 7px;
+        margin-bottom: 7px;
+        margin-left: 5px;
         max-height: 50px;
         min-height: 25px;
+        padding: 10px 0;
+        width: 130%;
     }
 
     .hidden-on-desktop {
@@ -43,8 +123,7 @@
         background-color: #c7fafa;
         border: 0.1em solid lightgray;
         height: 50px;
-        width: 336px;
-        margin-left: 2px;
+        width: 100%;
     }
 
     body>div>a {
@@ -56,17 +135,18 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 339px;
+        width: 100%;
         height: 224px;
-        margin-left: 1.5px;
     }
 
     .sub-section {
         font-style: italic;
+        margin-top: 50px;
     }
 
-    footer>p {
+    footer {
         text-align: start;
+        margin-top: 100px;
     }
 
 }
