--- a/css/design.css
+++ b/css/design.css
@@ -69,6 +69,14 @@ h2 {
     margin: 2em 0;
 }
 
+.btn-top {
+    margin: 3px;
+}
+
+.btn-btm {
+    margin: 3px;
+}
+
 hr {
     margin-top: 50px;
     margin-bottom: 50px;
@@ -135,4 +143,8 @@ hr {
 .text {
     font-family: Anton;
     font-size: 22px;
+}
+
+footer {
+    margin-top: 120px;
 }
